@@ -5,7 +5,7 @@
     <meta name="keywords" content="68hc08 8032 8051 ansi c compiler assembler CPU DS390 embedded development Floating Point Arithmetic free Freescale GPL HC08 inline Intel ISO/IEC 9899:1990 Linux MAC OS X OSX manual Maxim mcs51 Microchip microcontroller open source PIC Unix Windows XP Z80 Zilog TLCS-90 STMicroelectronics STM8" />
     <title>SDCC - Small Device C Compiler</title>
     <link type="text/css" href="styles/style.css" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/x-icon" href="/images/sdcc.ico" />
+    <link rel="icon" type="image/svg+xml" href="/images/sdcc.svg">
   </head>
   <body link="teal" vlink="#483d8b">
     <div align="left">
