@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
   <title>SDCC Previous News and Changes</title>
   <link rel="stylesheet" href="styles/style.css" type="text/css" />
-  <link rel="shortcut icon" type="image/x-icon" href="/images/sdcc.ico" />
+  <link rel="icon" type="image/svg+xml" href="/images/sdcc.svg">
 </head>
 <body link="teal" vlink="#483d8b">
 <div align="left">
